--- a/hold.html
+++ b/hold.html
@@ -7,13 +7,58 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
   body {
-    font-family: 'Segoe UI', sans-serif;
-    background: #0e0e0e;
+    font-family: 'Orbitron', 'Segoe UI', sans-serif;
+    background: radial-gradient(circle at 20% 20%, #0b0b0b 40%, #000 100%);
     color: #f0f0f0;
     margin: 0;
     padding: 0;
   }
 
+  /* ==== MENU ==== */
+  nav {
+    display: flex;
+    justify-content: center;
+    background: linear-gradient(90deg, #111, #191919);
+    border-bottom: 2px solid #f7931a;
+    box-shadow: 0 0 20px #f7931a40;
+    padding: 10px 0;
+    flex-wrap: wrap;
+  }
+
+  nav a {
+    color: #f7931a;
+    text-decoration: none;
+    margin: 6px 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 0.9rem;
+    letter-spacing: 2px;
+    position: relative;
+    transition: 0.3s;
+  }
+
+  nav a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    width: 0;
+    height: 2px;
+    background: #00eaff;
+    transition: 0.3s;
+    box-shadow: 0 0 8px #00eaff;
+  }
+
+  nav a:hover {
+    color: #00eaff;
+    text-shadow: 0 0 8px #00eaff;
+  }
+
+  nav a:hover::after {
+    width: 100%;
+  }
+
+  /* ==== HEADER ==== */
   header {
     display: flex;
     justify-content: space-between;
@@ -23,13 +68,14 @@
     border-bottom: 2px solid #f7931a;
     flex-wrap: wrap;
     gap: 10px;
+    box-shadow: 0 0 15px #f7931a40;
   }
 
   h1 {
     color: #f7931a;
     margin: 0;
     font-size: 1.4rem;
-    flex: 1;
+    text-shadow: 0 0 8px #f7931a;
   }
 
   .file-controls {
@@ -48,16 +94,19 @@
   }
 
   .file-controls button {
-    background: #f7931a;
+    background: linear-gradient(90deg, #f7931a, #ff00c8);
     color: white;
     border: none;
     padding: 8px 12px;
     border-radius: 5px;
     cursor: pointer;
+    text-shadow: 0 0 5px #000;
+    box-shadow: 0 0 10px #f7931a80;
   }
 
   .file-controls button:hover {
-    background: #d37c0c;
+    background: linear-gradient(90deg, #00eaff, #f7931a);
+    box-shadow: 0 0 15px #00eaff80;
   }
 
   .file-controls input {
@@ -65,43 +114,127 @@
     font-size: 0.8rem;
   }
 
+  /* ==== LAYOUT ==== */
   .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+    gap: 15px;
     padding: 20px;
+
+    transition: 0.3s ease;
   }
 
-  .form-container {
+  /* ==== BOX ==== */
+  .box {
+    background: #1b1b1b;
+    border: 1px solid #2c2c2c;
+    border-radius: 12px;
+    padding: 0;
+    box-shadow: 0 0 10px #00eaff20;
+    transition: 0.3s;
     display: flex;
-    gap: 10px;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
+    flex-direction: column;
+    overflow: hidden;
   }
 
-  input, button {
+  .box:hover {
+    box-shadow: 0 0 20px #f7931a50;
+    transform: translateY(-3px);
+  }
+
+  .box-header {
+    background: linear-gradient(90deg, #f7931a, #00eaff);
     padding: 10px;
-    border: none;
-    border-radius: 6px;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
     font-size: 0.9rem;
+    color: #000;
+    letter-spacing: 1px;
+    box-shadow: 0 0 10px #f7931a50;
   }
 
-  input {
-    width: 180px;
+  .box-content {
+    padding: 15px;
+  }
+
+  /* === SUMMARY (DRE) === */
+  .summary {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  .summary-item b {
+    color: #f7931a;
+  }
+
+  /* === CALCULADORA === */
+  .calc-sats {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    text-align: center;
+  }
+
+  .calc-sats input {
+    width: 80%;
     background: #222;
     color: #fff;
+    border-radius: 8px;
+    border: 1px solid #333;
+    padding: 8px;
   }
 
-  button#addBtn {
-    background: #f7931a;
-    color: #fff;
+  .calc-sats button {
+    background: linear-gradient(90deg, #f7931a, #ff00c8);
+    border: none;
+    color: white;
+    padding: 8px 16px;
+    border-radius: 6px;
     cursor: pointer;
   }
 
-  button#addBtn:hover {
-    background: #d37c0c;
+  .calc-sats button:hover {
+    background: linear-gradient(90deg, #00eaff, #f7931a);
   }
 
+  /* === REGISTRAR DCA === */
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+  }
+
+  .form-container input {
+    width: 80%;
+    background: #222;
+    color: #fff;
+    border: 1px solid #333;
+    padding: 8px;
+    border-radius: 8px;
+  }
+
+  .form-container button {
+    background: linear-gradient(90deg, #00eaff, #f7931a);
+    border: none;
+    color: white;
+    padding: 10px 16px;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+
+  .form-container button:hover {
+    background: linear-gradient(90deg, #ff00c8, #00eaff);
+  }
+
+  /* === TABELA === */
   .table-container {
+    grid-column: 1 / -1;
     overflow-x: auto;
+    margin-top: 20px;
   }
 
   table {
@@ -110,7 +243,6 @@
     background: #1a1a1a;
     border-radius: 10px;
     overflow: hidden;
-    min-width: 600px;
   }
 
   th, td {
@@ -132,95 +264,78 @@
     font-size: 1rem;
   }
 
-  .summary {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    background: #1b1b1b;
-    border: 1px solid #2c2c2c;
-    padding: 15px;
-    border-radius: 10px;
-    margin-top: 20px;
-    gap: 10px;
-  }
-
-  .summary-item {
-    text-align: center;
-    flex: 1 1 20px;
-  }
-
-  .calc-sats {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    background: #1b1b1b;
-    padding: 15px;
-    border-radius: 10px;
-    border: 1px solid #2c2c2c;
-    margin-top: 15px;
-    flex-wrap: wrap;
-  }
-
-  .calc-sats input {
-    width: 150px;
-  }
-
-  .calc-sats span {
-    font-size: 0.9rem;
-    color: #f7931a;
-    font-weight: bold;
-  }
-
-  .profit { color: #4CAF50; font-weight: bold; }
+  .profit { color: #00ff84; font-weight: bold; }
   .loss { color: #ff5252; font-weight: bold; }
 
-  p { word-wrap: break-word; font-size: 0.85rem; color: #bbb; }
+  p {
+    grid-column: 1 / -1;
+    text-align: center;
+    color: #888;
+    font-size: 0.8rem;
+  }
 
-  @media (max-width: 768px) {
-    .calc-sats { flex-direction: column; text-align: center; }
-    .calc-sats input { width: 100%; }
+  /* === Responsividade === */
+  @media (max-width: 600px) {
+    h1 { font-size: 1.1rem; }
+    .file-controls { justify-content: center; }
+    nav a { font-size: 0.8rem; margin: 4px 10px; }
   }
 </style>
 </head>
 <body>
 
+<nav>
+  <a href="https://boltz.exchange">boltz.exchange</a>
+  <a href="https://sideshift.ai">sideshift</a>
+  <a href="https://sideswap.io">sideswap</a>
+  <a href="https://bitcalc.jaonoctus.dev">BitCalc</a>
+  <a href="https://vempradig.com/dig?cupom=DINOPACON">DIGP2P</a>
+</nav>
+
 <header>
   <h1>Hold BTC Tracker</h1>
   <div class="file-controls">
-    <p>Você precisa sempre carregar e salvar o arquivo com o DCA.</p>
+    <p>Carregue ou salve seu arquivo DCA XML</p>
     <button id="saveXmlBtn"><i class="fa fa-save"></i> Salvar XML</button>
     <input type="file" id="loadXmlInput" accept=".xml">
   </div>
 </header>
 
 <div class="container">
-
-  <div class="summary" id="resumo">
-    <div class="summary-item" id="investido"><b>Total Investido:</b>R$ 0,00</div>
-    <div class="summary-item" id="btcTotal"><b>Total em BTC:</b>0 sats</div>
-    <div class="summary-item" id="precoMedio"><b>Preço médio:</b>R$ 0,00 / sat</div>
-    <div class="summary-item" id="cotacoes"><b>Cotações:</b>BTC/USD: ... | USD/BRL: ...</div>
-    <div class="summary-item" id="lucroTotal"><b>Lucro/Prejuízo total:</b>R$ 0,00 (0%)</div>
+  <!-- DRE -->
+  <div class="box">
+    <div class="box-header">DRE</div>
+    <div class="box-content summary" id="resumo">
+      <div class="summary-item" id="investido"><b>Total Investido:</b> R$ 0,00</div>
+      <div class="summary-item" id="btcTotal"><b>Total em BTC:</b> 0 sats</div>
+      <div class="summary-item" id="precoMedio"><b>Preço Médio:</b> R$ 0,00 BRL</div>
+      <div class="summary-item" id="cotacoes"><b>Cotações:</b> BTC/USD: ... | USD/BRL: ...</div>
+      <div class="summary-item" id="lucroTotal"><b>Lucro/Prejuízo Total:</b> R$ 0,00 (0%)</div>
+    </div>
   </div>
 
-  <!-- CALCULADORA DE SATS -->
-  <div class="calc-sats">
-    <input type="number" id="brlInput" placeholder="Valor em BRL">
-    <input type="number" id="taxaInput" placeholder="Taxa P2P (%)">
-    <button id="calcBtn">Calcular Sats</button>
-    <span id="resultadoSats">Receberá aproximadamente: 0 sats</span>
-  </div>
-    <br>
-    <div class="form-container">
-    <input type="number" id="valorBRL" placeholder="Valor DCA (BRL)">
-    <input type="number" id="sats" placeholder="Satoshis recebidos">
-    <button id="addBtn">Adicionar</button>
+  <!-- CALCULADORA -->
+  <div class="box">
+    <div class="box-header">Calculadora</div>
+    <div class="box-content calc-sats">
+      <input type="number" id="brlInput" placeholder="Valor em BRL">
+      <input type="number" id="taxaInput" placeholder="Taxa P2P (%)">
+      <button id="calcBtn">Calcular Sats</button>
+      <span id="resultadoSats">Receberá aproximadamente: 0 sats</span>
+    </div>
   </div>
 
-  <br>
+  <!-- REGISTRAR DCA -->
+  <div class="box">
+    <div class="box-header">Registrar DCA</div>
+    <div class="box-content form-container">
+      <input type="number" id="valorBRL" placeholder="Valor DCA (BRL)">
+      <input type="number" id="sats" placeholder="Satoshis recebidos">
+      <button id="addBtn">Adicionar</button>
+    </div>
+  </div>
 
+  <!-- TABELA -->
   <div class="table-container">
     <table id="tabela">
       <thead>
@@ -238,10 +353,7 @@
     </table>
   </div>
 
-  <br>
-  <p>Uma esmola para esse mendigo: <br>
-  Lightning: weedyhubcap01@walletofsatoshi.com <br>
-  Liquid: VJLB5zEzKMMTLtoepMcDsY8e6Pin8SttMoQhqmyjsUk9qZTuNfuv2JUuiYSiNpHiswecWKLEKkcBd7vK</p>
+  <p>⚡ weedyhubcap01@walletofsatoshi.com<br>🌊 Liquid: VJLB5zEzKMMTLtoepMcDsY8e6Pin8SttMoQhqmyjsUk9qZTuNfuv2JUuiYSiNpHiswecWKLEKkcBd7vK</p>
 </div>
 
 <script>
@@ -276,10 +388,21 @@ document.getElementById("calcBtn").addEventListener("click", () => {
     return alert("Preencha o valor e aguarde a cotação carregar.");
   }
 
-  const valorLiquido = brl * (1 - taxa / 100);
+  const formatBRL = (valor) =>
+    valor.toLocaleString("pt-BR", { style: "currency", currency: "BRL" });
+
+  const taxaValor = brl * (taxa / 100);
+  const valorLiquido = brl - taxaValor;
   const btc = valorLiquido / (cotacaoBTC * cotacaoUSD);
   const sats = btc * 100000000;
-  document.getElementById("resultadoSats").innerHTML = `Receberá: ${sats.toFixed(0)} sats`;
+
+  const taxaEmBTC = taxaValor / (cotacaoBTC * cotacaoUSD);
+  const taxaEmSats = taxaEmBTC * 100000000;
+
+  document.getElementById("resultadoSats").innerHTML = `
+    <b>Receberá:</b> ${sats.toFixed(0).toLocaleString("pt-BR")} sats<br>
+    <b>Taxa:</b> ${formatBRL(taxaValor)} (${taxaEmSats.toFixed(0)} sats)
+  `;
 });
 
 function renderizarTabela() {
@@ -315,16 +438,26 @@ function editarCampo(index, campo, valor) {
 function atualizarResumo() {
   const totalInvestido = dados.reduce((sum, d) => sum + d.valor, 0);
   const totalSats = dados.reduce((sum, d) => sum + d.sats, 0);
-  const precoMedio = totalSats > 0 ? totalInvestido / totalSats : 0;
+
+  // Cálculo do preço médio em BRL por 1 BTC
+  const precoMedio = totalSats > 0 ? totalInvestido / (totalSats / 100000000) : 0;
+
   const valorAtualTotal = (totalSats / 100000000) * cotacaoBTC * cotacaoUSD;
   const lucroTotal = valorAtualTotal - totalInvestido;
   const lucroPercent = totalInvestido > 0 ? (lucroTotal / totalInvestido) * 100 : 0;
   const lucroClass = lucroTotal >= 0 ? "profit" : "loss";
-  document.getElementById("investido").innerHTML = `<b>Total Investido:</b><br>R$ ${totalInvestido.toFixed(2)}`;
-  document.getElementById("btcTotal").innerHTML = `<b>Total em BTC:</b><br>${totalSats} sats`;
-  document.getElementById("precoMedio").innerHTML = `<b>Preço médio:</b><br>R$ ${precoMedio.toFixed(8)} / sat`;
+
+  const formatBRL = (valor) =>
+    valor.toLocaleString("pt-BR", { style: "currency", currency: "BRL" });
+
+  document.getElementById("investido").innerHTML =
+    `<b>Total Investido:</b><br>${formatBRL(totalInvestido)}`;
+  document.getElementById("btcTotal").innerHTML =
+    `<b>Total em BTC:</b><br>${totalSats.toLocaleString("pt-BR")} sats`;
+  document.getElementById("precoMedio").innerHTML =
+    `<b>Preço médio:</b><br>${formatBRL(precoMedio)}`;
   document.getElementById("lucroTotal").innerHTML =
-    `<b>Lucro/Prejuízo total:</b><br><span class="${lucroClass}">R$ ${lucroTotal.toFixed(2)} (${lucroPercent.toFixed(2)}%)</span>`;
+    `<b>Lucro/Prejuízo total:</b><br><span class="${lucroClass}">${formatBRL(lucroTotal)} (${lucroPercent.toFixed(2)}%)</span>`;
 }
 
 document.getElementById("addBtn").addEventListener("click", () => {
